<resources>

    <string name="jogar">Jogar</string>
    <string name="sair">Sair</string>
    <string name="creditos">Créditos</string>
    <string name="placar">Placar</string>


    <string name="githubH">GitHub: Higor335</string>
    <string name="githubJ">GitHub: Jose-115</string>
    <string name="TextoSobre">Criadores: Higor Vital e José Leonardo. Estudantes do curso Sistemas de Informação na UFMS.</string>

    <string name="app_name">Jogo da Forca</string>
    <string name="tituloPerfil">Criação de Perfil</string>
    <string name="nick">NICKNAME:</string>
    <string name="avatar">Escolha um Avatar</string>
    <string name="entrar">Entrar</string>

    <string name="titulo">Dados do Usuário</string>
    <string name="seuAvatar">Seu Avatar</string>
    <string name="voltar">Voltar</string>
    <string name="continuar">Continuar</string>

    <string name="dificuldade">Selecione a Dificuldade</string>
    <string name="facil">Fácil</string>
    <string name="medio">Médio</string>
    <string name="dificil">Difícil</string>
    <string name="personalizado">Personalizado</string>

    <string name="reiniciar">Reiniciar</string>
    <string name="dificuldadeMenu">Nova palavra</string>
    <string name="mudarDificuldade">Mudar Dificuldade</string>
    <string name="SairDoJogo">Sair do jogo</string>
    <string name="Sair">Sair</string>

    <string name="criaPalavra">crie suas palavras</string>
    <string name="palavra">Sua Palavra:</string>
    <string name="tema">Tema:</string>
    <string name="quantidade">Palavras Adicionadas:</string>
    <string name="apagar">Apagar Palavras</string>

    <string name="salvar">Salvar</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
</resources>