<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="-5dp"
    tools:context=".TelaJogo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivJogador"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/char1" />

            <TextView
                android:id="@+id/tvJogador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="25dp"
                android:fontFamily="@font/coda"
                android:gravity="center|left"
                android:text="TextView"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="TextView"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/gear" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLinhas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <TableRow
                android:id="@+id/rowLinhas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp" />

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                app:srcCompat="@drawable/forca1" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingBottom="50dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dip"
                android:layout_weight="2"
                android:clipToPadding="false"
                android:gravity="center"
                android:padding="0dip"
                android:visibility="visible">

                <Button
                    android:id="@+id/btA"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/a"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btB"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/b"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btC"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/c"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btD"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/d"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btE"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/e"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btF"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/f"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btG"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/g"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dip"
                android:gravity="center"
                android:padding="0dip">

                <Button
                    android:id="@+id/btH"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/h"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btI"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/i"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btJ"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/j"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btK"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/k"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btL"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/l"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btM"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/m"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btN"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/n"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dip"
                android:gravity="center"
                android:padding="0dip">

                <Button
                    android:id="@+id/btO"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/o"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btP"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/p"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btQ"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/q"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btR"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/r"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btS"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/s"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btT"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/t"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btU"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/u"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dip"
                android:gravity="center"
                android:padding="0dip">

                <Button
                    android:id="@+id/btV"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/v"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btW"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/w"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btX"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/x"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btY"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/y"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btZ"
                    android:layout_width="45dp"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="2dp"
                    android:text="@string/z"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>