<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="15dp"
    tools:context=".CriaPalavra">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/criaPalavra"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:id="@+id/trDica"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="20dp">

        <TextView
            android:id="@+id/tvDica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:fontFamily="@font/coda"
            android:text="@string/tema"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etDica"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/coda"
            android:hint="Tema das palavras"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="@font/coda"
            android:text="@string/palavra"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPala"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/coda"
            android:hint="Digite sua palavra"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantidade" />

        <TextView
            android:id="@+id/tvQuantidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btApagar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="70dp"
            android:backgroundTint="#F60404"
            android:onClick="apagar"
            android:text="@string/apagar" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btVolta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_weight="2"
            android:fontFamily="@font/coda"
            android:onClick="volta"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:fontFamily="@font/coda"
            android:onClick="salvar"
            android:text="@string/salvar" />
    </TableRow>

</TableLayout>