<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/coda"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btJogar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="18dp"
            android:backgroundTint="#BD5757"
            android:fontFamily="@font/coda"
            android:onClick="jogar"
            android:text="@string/jogar"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="18dp"
            android:backgroundTint="#8F3939"
            android:fontFamily="@font/coda"
            android:onClick="placar"
            android:text="@string/placar"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="18dp"
            android:backgroundTint="#9E4242"
            android:fontFamily="@font/coda"
            android:onClick="creditos"
            android:text="@string/creditos"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="18dp"
            android:backgroundTint="#6C2C2C"
            android:fontFamily="@font/coda"
            android:onClick="sair"
            android:text="@string/sair"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
